--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             <Button android:id="@+id/btn_enter"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/btn_cadastre"
+                android:text="@string/btn_login"
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
@@ -77,7 +77,4 @@
 
         </LinearLayout>
     </ScrollView>
-
-
-
 </android.support.design.widget.CoordinatorLayout>
