--- a/Cordeus/app/src/main/res/layout/activity_main.xml
+++ b/Cordeus/app/src/main/res/layout/activity_main.xml
@@ -10,46 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".views.MainActivity">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_margin="5dp">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_reflections"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:scrollbarStyle="insideOverlay" />
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="4dp"
-                android:text="Título da reflexão"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
-                android:text="alguma descrição" />
-
-            <ImageView
-                android:layout_width="110dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="4dp"
-                android:contentDescription="@string/app_name"
-                android:src="@color/colorAccent" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/new_reflections"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:layout_weight="0.5"
+        android:scrollbarStyle="insideOverlay" />
 </LinearLayout>
