--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="color1">#c68c53</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="green">#2eb82e</color>
+    <color name="orange">#cc5933</color>
 </resources>
