--- a/Cordeus/app/src/main/res/layout/card_item.xml
+++ b/Cordeus/app/src/main/res/layout/card_item.xml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp">
+    android:id="@+id/layout_cordel"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginTop="5dp"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_cordel_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:maxHeight="40dp"
+        android:maxLines="2" />
 
     <ImageView
         android:id="@+id/cordel_icon"
         android:layout_width="110dp"
         android:layout_height="110dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="4dp"
         android:contentDescription="@string/app_name" />
-</android.support.v7.widget.CardView>
+
+
+    <!--
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="4dp">
+
+        <ImageView
+            android:id="@+id/cordel_icon"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="4dp"
+            android:contentDescription="@string/app_name" />
+
+    </android.support.v7.widget.CardView>
+    -->
+</LinearLayout>
