--- a/Cordeus/app/src/main/res/layout/activity_register.xml
+++ b/Cordeus/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,21 @@
                     android:hint="@string/hint_password" />
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_password_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/et_password_confirm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:inputType="textPassword"
+                    android:maxLength="50"
+                    android:hint="@string/hint_password_confirm" />
+            </android.support.design.widget.TextInputLayout>
+
             <Button android:id="@+id/btn_cadastre"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
