Guardando referência do vídeo do usuário no servidor

--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#ffffff</color>
     <color name="green">#2eb82e</color>
     <color name="orange">#cc5933</color>
+    <color name="default_color">#d0976a</color>
 </resources>
