--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/default_color"
     tools:context="empsoft.ufcg.edu.cordeus.views.LoginActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-    </android.support.design.widget.AppBarLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="60dp"
+        android:gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="192dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher" />
+
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="?attr/actionBarSize"
             android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="16dp">
+            android:gravity="center_horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_name"
@@ -33,8 +40,9 @@
 
                 <EditText
                     android:id="@+id/et_username"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
                     android:singleLine="true"
                     android:maxLength="50"
                     android:hint="@string/hint_username" />
@@ -47,9 +55,11 @@
 
                 <EditText
                     android:id="@+id/et_password"
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
+                    android:layout_marginTop="10dp"
+                    android:padding="10dp"
                     android:inputType="textPassword"
                     android:maxLength="50"
                     android:hint="@string/hint_password" />
@@ -60,8 +70,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/btn_login"
                 android:textAlignment="center"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/black"
                 android:textColor="@android:color/white"/>
 
             <Button
@@ -72,9 +83,13 @@
                 android:text="@string/btn_register"
                 android:textAllCaps="false"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="16sp"/>
 
         </LinearLayout>
+
+    </LinearLayout>
     </ScrollView>
+
+
 </android.support.design.widget.CoordinatorLayout>
