--- a/Cordeus/app/src/main/res/layout/activity_main.xml
+++ b/Cordeus/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/default_color"
     tools:context=".views.MainActivity">
+
+
+    <ImageButton
+        android:id="@+id/ib_account"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="@color/default_color"
+        android:src="@mipmap/ic_account_circle_black_36dp"
+        android:layout_gravity="right" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_reflections"
