--- a/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:background="@color/color1"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
+    android:padding="16dp"
     tools:context="empsoft.ufcg.edu.cordeus.views.NewCordelActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-    </android.support.design.widget.AppBarLayout>
+        android:theme="@style/AppTheme.AppBarOverlay"></android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,16 +30,15 @@
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_margin="30dp"
                 android:layout_gravity="center"
+                android:layout_margin="30dp"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_cordel"
                     android:layout_width="200dp"
                     android:layout_height="fill_parent"
-                    android:layout_marginEnd="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:layout_marginEnd="10dp" />
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -48,17 +46,17 @@
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Título do cordel"
-                    android:textSize="36sp"/>
+                    android:textSize="36sp" />
 
                 <TextView
                     android:id="@+id/tv_passage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_title"
-                    android:layout_toEndOf="@+id/iv_cordel"
                     android:layout_marginTop="2dp"
+                    android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Passagem bíblica"
-                    android:textSize="24sp"/>
+                    android:textSize="24sp" />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
@@ -69,30 +67,30 @@
             android:orientation="horizontal"
             android:paddingTop="20dp">
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/green"
-                    android:layout_weight="0.5"
-                    android:text="@string/btn_to_buy"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.5"
+                android:background="@color/green"
+                android:text="@string/btn_to_buy"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/btn_code_promotional"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_weight="0.5"
-                    android:background="@color/orange"
-                    android:text="@string/btn_code"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"/>
+            <Button
+                android:id="@+id/btn_code_promotional"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.5"
+                android:background="@color/orange"
+                android:text="@string/btn_code"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
         </LinearLayout>
     </LinearLayout>
