Adicionando Splash e fazendo ajustes nas telas de login e cadastro.

--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="white">#ffffff</color>
     <color name="green">#2eb82e</color>
     <color name="orange">#cc5933</color>
+    <color name="orange_dark">#ba4825</color>
     <color name="default_color">#d0976a</color>
+    <color name="default_color_dark">#c98b5b</color>
 </resources>
