--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -12,84 +12,99 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="60dp"
-        android:gravity="center_horizontal">
-
-        <ImageView
-            android:layout_width="192dp"
-            android:layout_height="100dp"
-            android:src="@mipmap/logo" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:gravity="center_horizontal"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:layout_marginTop="60dp"
+            android:gravity="center_horizontal">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_name"
+            <ImageView
+                android:layout_width="192dp"
+                android:layout_height="100dp"
+                android:src="@mipmap/logo" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp">
 
-                <EditText
-                    android:id="@+id/et_username"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_username"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:hint="@string/hint_username" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_password"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:layout_marginTop="10dp"
+                        android:padding="10dp"
+                        android:inputType="textPassword"
+                        android:maxLength="50"
+                        android:hint="@string/hint_password" />
+                </android.support.design.widget.TextInputLayout>
+
+                <Button android:id="@+id/btn_enter"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:singleLine="true"
-                    android:maxLength="50"
-                    android:hint="@string/hint_username" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/et_password"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
+                    android:text="@string/btn_login"
+                    android:textAlignment="center"
                     android:layout_marginTop="10dp"
-                    android:padding="10dp"
-                    android:inputType="textPassword"
-                    android:maxLength="50"
-                    android:hint="@string/hint_password" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/orange"
+                    android:textColor="@android:color/white"/>
 
-            <Button android:id="@+id/btn_enter"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/btn_login"
-                android:textAlignment="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/black"
-                android:textColor="@android:color/white"/>
+                <Button
+                    android:id="@+id/btn_register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/btn_register"
+                    android:textAllCaps="false"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"/>
 
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/btn_register"
-                android:textAllCaps="false"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
     </ScrollView>
 
+    <RelativeLayout
+        android:id="@+id/loadingLogin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#64000000"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            style="?android:attr/progressBarStyleLarge"/>
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
