--- a/Cordeus/app/src/main/res/layout/activity_register.xml
+++ b/Cordeus/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/default_color"
     tools:context="empsoft.ufcg.edu.cordeus.views.RegisterActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -19,12 +20,14 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="16dp">
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:gravity="center_horizontal">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_name"
@@ -77,7 +80,25 @@
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:background="@color/orange"
                 android:textColor="@android:color/white"/>
         </LinearLayout>
+
     </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/loadingRegister"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#64000000"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            style="?android:attr/progressBarStyleLarge"/>
+
+    </RelativeLayout>
+
 </android.support.design.widget.CoordinatorLayout>
