--- a/Cordeus/app/src/main/res/values/styles.xml
+++ b/Cordeus/app/src/main/res/values/styles.xml
@@ -16,7 +16,14 @@
     <style name="AppThemeLogin" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimaryDark">@color/default_color_dark</item>
+        <item name="colorAccent">@color/black</item>
+    </style>
+
+    <style name="AppThemeRegister" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimaryDark">@color/orange_dark</item>
         <item name="colorAccent">@color/black</item>
     </style>
 
