--- a/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color1"
+    android:background="@color/default_color"
     android:fitsSystemWindows="true"
     android:padding="16dp"
     tools:context="empsoft.ufcg.edu.cordeus.views.NewCordelActivity">
@@ -36,7 +36,7 @@
 
                 <ImageView
                     android:id="@+id/iv_cordel"
-                    android:layout_width="200dp"
+                    android:layout_width="150dp"
                     android:layout_height="fill_parent"
                     android:layout_marginEnd="10dp" />
 
@@ -93,6 +93,7 @@
                 android:textSize="20sp" />
 
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
