--- a/Cordeus/app/src/main/res/layout/card_item.xml
+++ b/Cordeus/app/src/main/res/layout/card_item.xml
@@ -15,12 +15,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:maxHeight="40dp"
-        android:maxLines="2" />
+        android:maxLines="2"
+        android:gravity="center"/>
 
     <ImageView
         android:id="@+id/cordel_icon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:contentDescription="@string/app_name" />
 
 
