--- a/Cordeus/app/src/main/res/values/styles.xml
+++ b/Cordeus/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppThemeLogin" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppThemeDefault" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/default_color_dark</item>
