Reajustes nas telas

--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="orange_dark">#ba4825</color>
     <color name="default_color">#d0976a</color>
     <color name="default_color_dark">#c98b5b</color>
+    <color name="rosa1">#CD5C5C</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
