--- a/Cordeus/app/src/main/res/layout/activity_main.xml
+++ b/Cordeus/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,27 +12,50 @@
     android:background="@color/default_color"
     tools:context=".views.MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.05">
 
-    <ImageButton
-        android:id="@+id/ib_account"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:background="@color/default_color"
-        android:src="@mipmap/ic_account_circle_black_36dp"
-        android:layout_gravity="right" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            android:src="@drawable/logofinal2"
+            android:layout_gravity="start"/>
+
+        <ImageButton
+            android:id="@+id/ib_about"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_toLeftOf="@+id/ib_account"
+            android:layout_marginEnd="20dp"
+            android:background="@color/default_color"
+            android:src="@mipmap/ic_loyalty_white_24dp" />
+
+        <ImageButton
+            android:id="@+id/ib_account"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:background="@color/default_color"
+            android:src="@mipmap/ic_exit_to_app_white_24dp" />
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_reflections"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
+        android:layout_marginBottom="10dp"
         android:scrollbarStyle="insideOverlay" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/new_reflections"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="15dp"
-        android:layout_weight="0.5"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.4"
         android:scrollbarStyle="insideOverlay" />
 </LinearLayout>
