--- a/Cordeus/app/src/main/res/layout/activity_splash.xml
+++ b/Cordeus/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/default_color"
+    android:background="@color/yellow"
     tools:context="empsoft.ufcg.edu.cordeus.views.SplashActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -20,9 +20,9 @@
         android:gravity="center_horizontal">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@mipmap/logo"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:src="@drawable/logofinal"
             android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
