--- a/Cordeus/app/src/main/res/layout/card_item_new.xml
+++ b/Cordeus/app/src/main/res/layout/card_item_new.xml
@@ -14,36 +14,36 @@
         android:id="@+id/tv_cordel_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxHeight="40dp"
         android:maxLines="2"
+        android:ellipsize="end"
         android:textColor="@color/white"
         android:gravity="center"/>
 
-    <ImageView
-        android:id="@+id/cordel_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:contentDescription="@string/app_name"/>
 
+    <RelativeLayout
+        android:id="@+id/n"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-
-    <!--
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_margin="5dp"
-        card_view:cardCornerRadius="4dp">
+        <android.support.design.widget.FloatingActionButton
+            android:layout_height="24dp"
+            android:layout_width="24dp"
+            app:layout_anchor="@id/n"
+            app:backgroundTint="@color/yellow"
+            app:pressedTranslationZ="12dp"
+            android:layout_gravity="bottom|right"
+            android:src="@mipmap/ic_loyalty_white_24dp"
+            android:clickable="true"/>
 
         <ImageView
             android:id="@+id/cordel_icon"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="4dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:contentDescription="@string/app_name" />
 
-    </android.support.v7.widget.CardView>
-    -->
+    </RelativeLayout>
+
+
+
+
 </LinearLayout>
