--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="192dp"
                 android:layout_height="100dp"
-                android:src="@drawable/nomecolorido" />
+                android:src="@drawable/app_name_colorful" />
 
             <LinearLayout
                 android:layout_width="match_parent"
