--- a/Cordeus/app/src/main/res/layout/activity_main.xml
+++ b/Cordeus/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -18,28 +17,28 @@
         android:layout_weight="0.05">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="120dp"
+            android:layout_height="60dp"
             android:layout_marginStart="30dp"
-            android:src="@drawable/nomepreto"
+            android:src="@drawable/app_name_black"
             android:layout_gravity="start"/>
 
         <ImageButton
             android:id="@+id/ib_about"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_toLeftOf="@+id/ib_account"
             android:layout_marginEnd="20dp"
             android:background="@color/default_color"
-            android:src="@mipmap/ic_loyalty_white_24dp" />
+            android:src="@mipmap/ic_loyalty_black_36dp" />
 
         <ImageButton
             android:id="@+id/ib_account"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_alignParentRight="true"
             android:background="@color/default_color"
-            android:src="@mipmap/ic_exit_to_app_white_24dp" />
+            android:src="@mipmap/ic_exit_to_app_black_36dp" />
 
     </RelativeLayout>
 
@@ -58,4 +57,5 @@
         android:layout_marginTop="10dp"
         android:layout_weight="0.4"
         android:scrollbarStyle="insideOverlay" />
+
 </LinearLayout>
