--- a/Cordeus/app/src/main/res/values/styles.xml
+++ b/Cordeus/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
     <style name="AppThemeRegister" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/blue</item>
-        <item name="colorPrimaryDark">@color/default_color_dark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/blue</item>
     </style>
 
