--- a/Cordeus/app/src/main/res/layout/card_item.xml
+++ b/Cordeus/app/src/main/res/layout/card_item.xml
@@ -14,37 +14,18 @@
         android:id="@+id/tv_cordel_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:layout_weight="0.2"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textSize="14sp"
+        android:layout_gravity="center"
         android:textColor="@color/black"
-        android:gravity="center"/>
+        />
 
     <ImageView
         android:id="@+id/cordel_icon"
-        android:layout_weight="0.8"
         android:layout_width="100dp"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"/>
 
 
-
-    <!--
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_margin="5dp"
-        card_view:cardCornerRadius="4dp">
-
-        <ImageView
-            android:id="@+id/cordel_icon"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="4dp"
-            android:contentDescription="@string/app_name" />
-
-    </android.support.v7.widget.CardView>
-    -->
 </LinearLayout>
